# plasma

./: .gitignore  .hgignore  CMakeLists.txt  ChangeLog  LICENSE  Makefile  README.md  configure.py  make.inc  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-icc  make.inc.power8-gcc  plasma_internal_z.h
.github/workflows/: build.sh  configure.sh  main.yml  setup_env.sh  test.sh
Modules/: FindAccelerate.cmake  FindCBLAS.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindNetlibCblas.cmake  FindNetlibLapacke.cmake
cmake/: FindCBLAS.cmake  FindLAPACKE.cmake  FindLibSci.cmake  FindMKL.cmake  FindNetlibCblas.cmake  FindOpenBLAS.cmake  Generator.cmake
compute/: clag2z.c  dlaebz2.c  dlaneg2.c  dstess.c  dstevx2.c  dzamax.c  pclag2z.c  pdzamax.c  pzdesc2ge.c  pzdesc2pb.c  pzdesc2tr.c  pzgb2desc.c  pzgbbrd_static.c  pzgbtrf.c  pzge2desc.c  pzge2gb.c  pzge2tb.c  pzgeadd.c  pzgecpy_tile2lapack_band.c  pzgelqf.c  pzgelqf_tree.c  pzgelqfrh.c  pzgemm.c  pzgeqrf.c  pzgeqrf_tree.c  pzgeqrfrh.c  pzgeswp.c  pzgetrf.c  pzgetri_aux.c  pzhbtrd_static.c  pzhe2hb.c  pzheb2trd_static.c  pzhecpy_tile2lapack_band.c  pzhemm.c  pzher2k.c  pzherk.c  pzhetrf_aa.c  pzhetrf_aasen.c  pzlacpy.c  pzlag2c.c  (+116 more)
config/: config.py  default.lua
control/: async.c  async.h  barrier.c  config.c  constants.c  context.c  context.h  descriptor.c  descriptor.h  internal.h  internal_z.h  plasma_rh_tree.c  pztile.c  tile.c  tree.c  tune.h  tuning.c  version.c  workspace.c  ztile.c
core_blas/: core_blas.h  core_blas_z.h  core_clag2z.c  core_dcabs1.c  core_dzamax.c  core_zgbtype1cb.c  core_zgbtype2cb.c  core_zgbtype3cb.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgemm_fill.c  core_zgeqrt.c  core_zgessq.c  core_zgeswp.c  core_zgetrf.c  core_zgetrf_tile.c  core_zhbtrd_type1.c  core_zhbtrd_type2.c  core_zhbtrd_type3.c  core_zhbtype1cb.c  core_zhbtype2cb.c  core_zhbtype3cb.c  core_zhegst.c  core_zhemm.c  core_zher2k.c  core_zherfb.c  core_zherk.c  core_zhessq.c  core_zheswp.c  core_zlacpy.c  core_zlacpy_band.c  core_zlag2c.c  core_zlange.c  core_zlanhe.c  core_zlansy.c  core_zlantr.c  core_zlarfb_gemm.c  core_zlarfy.c  core_zlascl.c  (+40 more)
docs/: style-guide.md
docs/doxygen/: DoxygenLayout.xml  Makefile  doxyfile.conf  groups.dox
fortran_examples/: test_all.sh  test_zcgesv.f90  test_zcposv.f90  test_zgels.f90  test_zgeqrf.f90  test_zgeqrf_omp.f90  test_zgetrs.f90  test_zpotrf.f90  test_zpotri.f90  test_zpotrs.f90
include/: async.h  bulge.h  core_blas.h  core_blas_z.h  core_blas_zc.h  core_lapack.h  core_lapack_z.h  internal.h  internal_z.h  plasma.h  plasma_async.h  plasma_barrier.h  plasma_bulge.h  plasma_config.h  plasma_config.hin  plasma_context.h  plasma_core_blas.h  plasma_core_blas_z.h  plasma_core_blas_zc.h  plasma_descriptor.h  plasma_error.h  plasma_internal.h  plasma_internal_z.h  plasma_internal_zc.h  plasma_rh_tree.h  plasma_tree.h  plasma_tune.h  plasma_tuning.h  plasma_types.h  plasma_workspace.h  plasma_z.h  plasma_zc.h  plasma_zlaebz2_work.h  plasmatypes.h
lib/pkgconfig/: plasma.pc.in
proto/: pzlange.c  pzlanhe.c  zlange.c
proto/compute/: zcposv.c
proto/core_blas/: core_zlanhe.c
proto/test/: test_xtradd.sh  test_zcposv.c
script/: test_xtradd.m
share/cmake/: plasma.cmakein
share/pkgconfig/: plasma.pcin
test/: Makefile  flops.h  run_tests.py  test.c  test.h  test_all.sh  test_clag2z.c  test_dstevx2.c  test_dzamax.c  test_xlacpy.sh  test_xtradd.sh  test_z.h  test_zc.h  test_zcgbsv.c  test_zcgesv.c  test_zcposv.c  test_zgbmm.c  test_zgbsv.c  test_zgbtrf.c  test_zgeadd.c  test_zgeinv.c  test_zgelqf.c  test_zgelqs.c  test_zgels.c  test_zgemm.c  test_zgeqrf.c  test_zgeqrs.c  test_zgesdd.c  test_zgesv.c  test_zgeswp.c  test_zgetrf.c  test_zgetri.c  test_zgetri_aux.c  test_zgetrs.c  test_zhbtrd.c  test_zheevd.c  test_zhemm.c  test_zher2k.c  test_zherk.c  test_zhesv.c  (+33 more)
tools/: checklist.py  checklist.sh  codegen.py  create_release_file.sh  doxygen-filter.pl  doxygen_filter  doxygen_groups.sh  fortran_gen.py  generate_precisions.py  makespackrelease.py  plasma_testing.py  subs.py  trace.c
tools/old_build_system/: Makefile  configure.py  make.inc.in  make.inc.mkl-gcc  make.inc.power8-gcc
tools/old_build_system/config/: __init__.py  config.py  environment.py
tuning/: default.lua
